# swiss-afrr-spike-prediction

./: .env.example  .gitignore  00_fetch_energy_data.py  README.md  fetch_energy_data.py  pyproject.toml  requirements.txt
01_causal_inference/: README.md  run_all.py
01_causal_inference/scripts/: 00_load_and_preprocess.py  01_feature_engineering.py  02_granger_causality.py  03_eda_analysis.py  04_visualise.py
02_model_training/: run_all.py
02_model_training/config/: config.yaml
02_model_training/scripts/: 00_prepare_features.py  01_train_xgboost.py  02_evaluate.py  03_explain.py
afrr-phase2/: 2d_prophet_baseline.py
pipeline/: mlflow.db  setup.sh
pipeline/dags/: energy_dag.py  retrain_dag.py
pipeline/monitoring/clustering/: spike_incident_clustering.py
pipeline/monitoring/domain/: domain_anomaly_detector.py  domain_rules.yaml
pipeline/monitoring/logical/: logical_anomaly_detector.py
pipeline/monitoring/statistical/: statistical_anomaly_detector.py
pipeline/tasks/: build_features.py  drift_check.py  evaluate.py  fetch_data.py  predict.py  utils.py  validate_data.py
pipeline/training/: challenger_calibrator.pkl  challenger_meta.json  challenger_model.json  train_model.py
src/swiss_energy/: __init__.py
