[project]
name = "swiss-energy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yuan-phd", email = "ye.yuan.phd@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "entsoe-py>=0.7.10",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
