[project]
name = "swiss-energy"
version = "0.1.0"
description = "Swiss Power Causal ML Project - Mac Edition"
readme = "README.md"
authors = [
    { name = "yuan-phd", email = "ye.yuan.phd@gmail.com" }
]

requires-python = ">=3.10,<3.12"

dependencies = [
    "pandas>=2.2.2,<3.0",
    "numpy>=1.26.4,<2.0",
    "scikit-learn==1.3.2",
    "xgboost==2.0.3",
    "shap==0.45.0",
    "mlflow==2.14.3",
    "numba>=0.58.1",
    "llvmlite>=0.41.1",
    "setuptools<71.0.0",
    "protobuf==4.25.3",
    "scipy>=1.11.4",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.0",
    "entsoe-py>=0.7.10",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.2",
    "lxml>=4.9.4",
]

[build-system]
requires = ["setuptools>=61.0.0,<71.0.0", "wheel"]
build-backend = "setuptools.build_meta"
